[FIX] documents: make x btn visible with long tags
By default, tables automatically adjust their width to accommodate the content of their cells,
That causes table row to grow in size and make "X" button invisible.
Here I'm constraining table layout so it doesn't matter how long the content of columns is

[Reproduce]
- Install documents
- Add tag with a very long name
- Go to all Documents, Select a document, Add the tag on a doc
- BUG: "X" button is not visible*

opw-3937326

closes odoo/enterprise#64378

X-original-commit: c1194de10f0f676645ff3e17fb62783bd9553ac4

--- a/documents/static/src/views/inspector/documents_inspector.scss
+++ b/documents/static/src/views/inspector/documents_inspector.scss
@@ -184,8 +184,10 @@
         padding: $o-dms-p-small $o-dms-p $o-dms-p;
 
         .o_inspector_table {
+            table-layout: fixed;
+
             .o_inspector_label {
-                width: 0%;
+                width: 45%;
                 color: $o-dms-inspector-txt-lighter;
                 vertical-align: middle;
                 padding-left: 0;
